# mfc-store-scraper

./: .env.example  .gitignore  .pylintrc  README.md  azure.py  data.csv  docker-compose.yml  get_prices.py  hummingbird-91424.json  main.py  playground.py  pyproject.toml  requirements.txt  test.py  thing.py
.github/: CODEOWNERS
.github/workflows/: pylint.yml  unittest.yml
archive/: main.py
archive/hummingbird/: constants.py  format_data.py  get_data.py
archive/hummingbird/test_data/: formatted_multi_pack_product.json  id_test_1.html  id_test_2.html
archive/hummingbird/unit/: test_utils.py
src/: constants.py  settings.py  utils.py
src/azure/: .env.example  .env.local  README.md  azure.py  azure_shopify_category_map.py  base_schema.sql  constants.py  docker-compose.yml  exporter.py  logger.py  main.py  postgres.py  scraper.py  settings.py  test_data.json
src/azure/cli/: __init__.py  create_media_in_shopify.py  get_products_from_azure.py  parallel_sync.py  sync_to_shopify.py
src/db/: base_schema.sql  coop_schema.sql  mock_data.sql  multi_vendor_schema.sql  postgres.py  schema.md
src/db/models/: media.py  packaging.py  price.py  product.py
src/hummingbird/: constants.py  format_data.py  get_data.py
src/lib/: compare_prices.py  logger.py  utils.py
src/shopify/: media_manager.py  shopify.py  shopify_csv.py
src/shopify/actions/: __init__.py  (+4 more)
test/: test_data.json
tests/test_data/: formatted_multi_pack_product.json  formatted_multi_variant_product.json  formatted_single_variant_product.json  id_test.html  test_data.json
tests/unit/: test_utils.py
(+29 files in other folders)
